--- a/_posts/2014-03-13-ny.markdown
+++ b/_posts/2014-03-13-ny.markdown
@@ -3,7 +3,9 @@ layout: post
 title: My New York Secrets Are Yours Now
 category: posts
 ---
-There are many things I hate about New York but there are about twice the number of the things that I love about it. Here are a collections of things I tell people (until now, only the near and dear ones) to do, eat and drink. These places are not overly popular that you would find them in any travel book (Okay, there might be one or two) but for the most part, these are places I have deep connections with and go back from time to time. I am not going to include any links to their sites, because I assume you can use the interwebs for it. 
+There are many things I hate about New York but there are about twice the number of the things that I love about it. Here are a collections of things I tell people (until now, only the near and dear ones) to do, eat and drink. 
+
+These places are not overly popular that you would find them in any travel book (Okay, there might be one or two) but for the most part, these are places I have deep connections with and go back from time to time. I am not going to include any links to their sites, because I assume you can use the interwebs for it. 
 I know that I might be doing myself a disservice by blogging about these favorites and increasing my wait time the next time I go here, BUT I also believe that if you have a good thing to offer to the world, the world should be back nice to you.
 
 So here they are, my biggest hits:
