--- a/_posts/2014-03-21-block.markdown
+++ b/_posts/2014-03-21-block.markdown
@@ -4,7 +4,9 @@ title: Online Ads, The Elephant In The Room
 category: posts
 ---
 Google made $50B in advertisement(Ad) revenue in 2013. Worth saying that again, FIFTY Billion. (Sure, when you compare that to the unbelievable doozy that FB made paying $19B for whatsapp, it doesn't sounds like a lot.) 
-I have clicked (voluntarily) on one single add in all my waking years,( It was a really tempting locally made cookie Ad) but i don't consider myself the average user either. Having faith in the law of averages, i ran the numbers. With about 2.4B active internet users in the world and an average CPC( Cost Per Click) of 30 cents, each user must have clicked on roughly 62 adds in a year. Hard to believe that those clicks are contributing towards making a purchase decision. 
+I have clicked (voluntarily) on one single add in all my waking years,( It was a really tempting locally made cookie Ad) but i don't consider myself the average user either. 
+
+Having faith in the law of averages, i ran the numbers. With about 2.4B active internet users in the world and an average CPC( Cost Per Click) of 30 cents, each user must have clicked on roughly 62 adds in a year. Hard to believe that those clicks are contributing towards making a purchase decision. 
 
 As our devices' screens get smaller, voice technology gets better, user awareness increases and the average users tolerance to ridiculous add filled pages decreases, there has to be  a sharp decline in the number of clicks.I am not suggesting that Ad revenue reliant companies like Google and Facebook are in trouble, i'm sure they will figure other solutions to make money.
 
