--- a/_posts/2014-06-15-meditate.markdown
+++ b/_posts/2014-06-15-meditate.markdown
@@ -11,7 +11,7 @@ Having practiced a couple of different techniques and thinking about my personal
 How many times have you decided on working on a side project or cleaning up your apartment, but ended up watching YouTube videos instead? It takes immense amount of discipline to stick to doing something after deciding to do it. Sometimes this discipline can come in the form of deadlines enforced by external circumstances.
 
 Meditation creates an environment that establishes the hierarchy of control between you and your mind. By stilling your mind and focusing on your breath, you are training your mind to listen you. When time comes for decisions and actions, the training enables you to do what you really should be doing. No more excuses for not going to the gym or not eating healthy or not developing yourself personally.
-I have a simple technique for meditation. Count from 1 to 8 in one long exhale and count back from 8 to 1 in one long inhale. Repeat this for the duration of your meditation. The counting can be Mississippi-fully, if it helps you :). If you occupy your mind to count while you breathe, it is impossible to think of anything else. It's a simple way to occupy your mind to do what you want it to do.
+I have a simple technique for meditation. Count from 1 to 8 in one long exhale and count back from 8 to 1 in one long inhale. Repeat this for the duration of your meditation. The counting can be mississippi-fully, if it helps you :). If you occupy your mind to count while you breathe, it is impossible to think of anything else. It's a simple way to occupy your mind to do what you want it to do.
 
 I am nowhere close to being able to fully control my mind, but after meditating for a couple of months now, I am more disciplined than I used to be. Maybe it is just "placebo," but it is a placebo that works. I suggest starting small. My fiancé and I meditate every night for 7 minutes before going to bed. It is amazing how hard it is to stay idle without doing anything for such a short period. It reminds us every day how easily your mind can own you. I have a long way to go but doing this consistently over the last couple of months has made a world of difference. I look forward to the journey. 
 
