--- a/_posts/2014-06-23-robot.markdown
+++ b/_posts/2014-06-23-robot.markdown
@@ -5,16 +5,16 @@ category: posts
 tags : Thoughts
 ---
 
-It is only a matter of time that <a href="https://www.youtube.com/watch?v=CqSDWoAhvLU">Driverless cars</a> will obviate all drivers - taxi, bus and truck. This will not be at the scope of the agricultural or industrial revolution, but close. Many will loose their jobs. Controversially, that may be a good thing.
+It is only a matter of time that <a href="https://www.youtube.com/watch?v=CqSDWoAhvLU">Driverless Cars</a> will obviate all drivers - taxi, bus and truck. This will not be at the scope of the agricultural or industrial revolution, but close.Many will lose their jobs. Controversially, that may be a good thing.
 
-You have probably noticed the outcry in the media about how robots are eating our jobs. The media is right about the statement but wrong about the sentiment. Progress is impossible without disruption. Hindsight is 20/20 and you'll find very few people who believe that the industrial revolution was a bad thing, even though it caused many hard working manual workers to loose their jobs. The standard of living <a href ="http://www.econlib.org/library/Enc/IndustrialRevolutionandtheStandardofLiving.html">rised</a> over the next 100 years and the life expectancy increased significantly from approximately 40-45 in the United States.
+You have probably noticed the outcry in the media about how robots are eating our jobs. The media is right about the statement but wrong about the sentiment. Progress is impossible without disruption. Hindsight is 20/20 and you'll find very few people who believe that the industrial revolution was a bad thing, even though it caused many hard working manual workers to lose their jobs. The standard of living <a href ="http://www.econlib.org/library/Enc/IndustrialRevolutionandtheStandardofLiving.html">rose</a> over the next 100 years, and the life expectancy increased significantly from approximately 40-45 years to 80 years in the United States.
 
-Internet was first used only in academia and defence. As the network effects piled up, existing industries were disrupted. Just how Amazon.com is disrupting the brick and mortar stores, not long from now, we will see disruption in the physical manufacturing space with <a href="http://en.wikipedia.org/wiki/Oculus_VR">Oculus Virtual Reality (VR) </a>. VR will do to a lot of physical devices what the IPhone did to physical keyboards on smart phones with touch-based keyboards.
+Internet was first used only in academia and defence. As the network effects piled up, existing industries were disrupted. Just how Amazon.com is disrupting the brick and mortar stores, not long from now, we will see disruption in the physical manufacturing space with <a href="http://en.wikipedia.org/wiki/Oculus_VR">Oculus Virtual Reality (VR) </a>. VR will do to a lot of physical devices what the iPhone did to physical keyboards on smart phones with touch-based keyboards.
 
-Oculus VR has come closest to making the virtual reality dream possible. The company is going after the 3D gaming space first, but the applications for the Rift are endless.
-Keyboard and mouse signals will be integrated to the VR software and you wouldn’t need physical computer monitors anymore. With cloud connectivity, the notion of a physical computer will be gone. Your software and data will be able to follow you. <a href="https://www.youtube.com/watch?v=Dgtba_GpG-U">Here</a> is a cool demo of how the future of programming could be. 
+Oculus VR has come closest to making the virtual reality dream possible with their first offering - Oculus Rift. The company is going after the 3D gaming space first, but the applications for the Rift are endless.
+Keyboard and mouse signals will be integrated to the VR software and you wouldn’t need physical computer monitors anymore. With cloud connectivity, the notion of a physical computer will be gone. Your software and data will be able to follow you. <a href="https://www.youtube.com/watch?v=Dgtba_GpG-U">Here</a> is a cool demo of how the future of programming could be like.
 
-Oculus Rift could be your personal 3D IMAX theatre that will disrupt the entire cinema industry. TV's will be obsolete. For a lot of us going to the movies or watching TV is a social experience.  Some people think that technology and the internetization (It is a real word now) of things removes the human element. This is far from the truth. Technology allows humans to make a connection, which couldn’t have existed without the technology. It would have been impossible to keep in touch with all my friends back in India without Facebook. Facebook didn't buy Oculus VR just for it's cool technology. VR will fundamentally change how people stay in touch.
+Oculus Rift could disrupt the entire film industry by giving everyone their own personal 3D IMAX theater. This could mean that the televisions could become obsolete as well. For a lot of us going to the movies or watching TV is a social experience.  Some people think that technology and the internetization (it is a real word now) of things removes the human element. This is far from the truth. Technology allows humans to make a connection which couldn’t have happened without the technology. Personally, it would have been impossible to keep in touch with all my friends back in India without Facebook. Facebook didn't buy Oculus VR just for it's cool technology. VR will fundamentally change how people stay in touch.
 With Oculus Rift, there is nothing stopping you from still hanging out with your friends. Instead of going to a certain place to do something, you and your friends could hang at a park and watch the same movie on your devices.
 
 Technology innovations are adopted in the mass market because of a combination of three reasons - price, convenience and quality. The next iteration of VR promises all three, which is a quite rare.
@@ -22,11 +22,10 @@ Technology innovations are adopted in the mass market because of a combination o
 
 Voice technology (VT) is getting started. Not long from now, VT will be able to detect <a href="https://www.youtube.com/watch?v=yR0lWICH3rY"></a> accents and reliably understand us. Andriod and Siri have shown what is possible so far, but it is just the beginning. Anything you touch today will turn into voice commands as input to a device. Possibly your phone, your watch or your <a href="https://www.google.com/glass/start/">glasses</a>. From keyboards to light switches in your living room. 
 
-Vision is not widely discussed in the market yet. <a href="https://developer.amazon.com/public/solutions/devices/fire-phone/docs/understanding-firefly">Amazon firefly</a> seems to be quite reliable with initial testing. Harder than image recognition is moving pattern recognition. The driverless car has a 360 degree camera and is able to understand its surroundings using pattern matching and probability. By the time legislation approves the use of driveless cars by public, more use cases for utilizing the vision technology will pop up.
+Vision is not widely discussed in the market yet. <a href="https://developer.amazon.com/public/solutions/devices/fire-phone/docs/understanding-firefly">Amazon Firefly</a> seems to be quite reliable with initial testing. Harder than image recognition is moving pattern recognition. The driverless car has a 360 degree camera and is able to understand its surroundings using pattern matching and probability. By the time legislation approves the use of driveless cars by public, more use cases for utilizing the vision technology will go main stream.
 
 Large number of industries will be disrupted when voice and vision technologies get better. 
 
-Robots will eventually eat <a href="https://www.youtube.com/watch?v=8_lfxPI5ObM">all</a> manual labor jobs. Although AI hasn't got to the point where it can replace knowledge workers yet, it seems probable that they are on track within the next 20-30 years. It is not as morose as it sounds though. Humans have always found new ways to occupy themselves and we as consumers always <i>need</i> new things. Tech innovation results in disruption but only a temporary disruption amongst workers and shift in capital.
+Robots will eventually eat <a href="https://www.youtube.com/watch?v=8_lfxPI5ObM">all</a> manual labor jobs. Although AI hasn't got to the point where it can replace knowledge workers yet, it seems probable that it is on track within the next 20-30 years. It is not as morose as it sounds though. Humans have always found new ways to occupy themselves and we as consumers always <i>need</i> new things. Tech innovation results in disruption but only a temporary disruption amongst workers and shift in capital.
 
-I'm optimistic about such transformation because once we get the robots to deal with the fundamental day-to-day problems, we are able to raise our head and explore more important and interesting problems. Solving world hunger (for real), space exploration, exploring the reason for existence, universal healthcare… 
-
+I'm optimistic about such transformation because once we get the robots to deal with the fundamental day-to-day problems, we are able to raise our head above the desk and explore more important and interesting problems. Solving world hunger (for real), space exploration, exploring the reason for existence, universal healthcare - to name a few.
