--- a/_posts/2014-06-23-robot.markdown
+++ b/_posts/2014-06-23-robot.markdown
@@ -28,4 +28,4 @@ Large number of industries will be disrupted when voice and vision technologies 
 
 Robots will eventually eat <a href="https://www.youtube.com/watch?v=8_lfxPI5ObM">all</a> manual labor jobs. Although AI hasn't got to the point where it can replace knowledge workers yet, it seems probable that it is on track within the next 20-30 years. It is not as morose as it sounds though. Humans have always found new ways to occupy themselves and we as consumers always <i>need</i> new things. Tech innovation results in disruption but only a temporary disruption amongst workers and shift in capital.
 
-I'm optimistic about such transformation because once we get the robots to deal with the fundamental day-to-day problems, we are able to raise our head above the desk and explore more important and interesting problems. Solving world hunger (for real), space exploration, exploring the reason for existence, universal healthcare - to name a few.
+I'm optimistic about such transformation because once we get the robots to deal with the fundamental day-to-day problems, we are able to raise our head above our desks and explore more important and interesting problems. Solving world hunger (for real), space exploration, exploring the reason for existence, universal healthcare - to name a few.
