--- a/_posts/2014-08-01-austin.markdown
+++ b/_posts/2014-08-01-austin.markdown
@@ -5,43 +5,38 @@ category: posts
 tags : Travel
 ---
 
-Kristina and I got married two weeks ago. If you aren’t married already, the first question someone asks you after they hear that you got married is - ‘where is the honeymoon?’ I don’t know if people are genuinely interested or making conversation or are in auto-pilot. I want to believe that majority fall in the 3rd category. Honeymoons were introduced way back when so couples could get personal in an intimate setting, easing them into a physical relationship. Times have obviously changed. Similar to political lobbying, it doesn’t make sense, is expensive and the participants are playing with antiquated rules. Time to move on...
+Kristina and I got married two weeks ago. If you aren’t married already, the first question someone asks you after they hear that you got married is, ‘where is the honeymoon?’ I don’t know if people are genuinely interested or making conversation or are on auto-pilot. I want to believe that majority fall in the 3rd category. Honeymoons were introduced way back when so couples could get personal in an intimate setting, easing them into a physical relationship. Times have obviously changed. Similar to political lobbying, it doesn’t make sense, is expensive and the participants are playing with antiquated rules. Time to move on...
 
-We didn’t have a honeymoon, but we did make a trip out to Austin to visit some family over the weekend and we both fell in love with it. Austin was different and it was unlike any other place I have travelled to in the US. I dare say that it was one of the very few cities (other than New York & San Francisco) that showed quite a bit of character.
+We didn’t have a honeymoon, but we did make a trip out to Austin to visit some family over the weekend. We both fell completely in love with it. Austin was different and it was unlike any other place I have traveled to in the US. I dare say that it was one of the very few cities (other than New York & San Francisco) that showed quite a bit of character.
 
-The first thing as a tourist you might notice, are the signs which say - ‘Keep Austin Weird’. It is true. I think people take a uncoordinated under the table approach to keeping Austin weird and hence different.  
+The first thing as a tourist you might notice are the signs which say ‘Keep Austin Weird’. It is true. I think people take a uncoordinated under the table approach to keeping Austin weird and hence different. For example, almost all the bars have a stage for a music performance. Pets are treated as first class citizens. One bar we went to had a pet play area, too! 
 
-Almost all the bars have a stage for a music performance. Pets are treated as first class citizens. One bar we went to had a pet play area too! 
-
-Having lived in New York city for quite a bit, you tend to have your shields up all the time. Feeling insecure and always alert. You feel like someone is always out to get you. Austin is quite the opposite of that. People want to help you and if you are like me, you will look down and scurry when someone greets you with a pleasant ‘good morning’ on the jogging path. You get used it soon enough though. People have a laid back approach to things and seem to have a very live and let live mentality.
+Having lived in New York city for quite a bit, you tend to have your guard up all the time. Feeling insecure and always alert. You feel like someone is always out to get you. Austin is quite the opposite of that. People want to help you and if you are like me, you will look down and scurry when someone greets you with a pleasant ‘good morning’ on the jogging path. You get used it soon enough, though. People have a laid back approach to things and seem to have a very ‘live and let live’ mentality.
 
 The downsides are the heat and Austin’s underwhelming coffee shop selection. 
-
-There is outdoor seating almost everywhere you go with large fans that spray mist. We were there on one of the hottest days of the summer and it is impossible to sit outside without the misting fans. 
-
-We tried about 5 coffee shops and had a rather OK experience. From a free-willed place like Austin, my expectations for coffee were much higher. Maybe we didn’t hit the right ones.
+There is outdoor seating almost everywhere you go with large fans that spray mist which helps with the ridiculous heat. We were there on one of the hottest days of the summer and it is impossible to sit outside without these misting fans. We tried about 5 coffee shops and had a rather OK experience. From a free-willed place like Austin, my expectations for coffee were much higher. Maybe we didn’t hit the right ones.
    
 Here are some highlights from our trip, so the next time you tell me that you are thinking about a trip down south, I can direct you to this post.
 
 <h2>Do</h2>
 
-Zilker Park| We did a great 6 mile run around the ladybird lake. Highly recommend.<br>
+Zilker Park| We did a great 6 mile run around the Ladybird Lake. Highly recommend.<br>
 Barton Springs Pool| A great natural pool fed from underground springs. I had never seen anything like this before.<br>
 Hamilton Pool Preserve| This reminded me of Avatar, with the mountains in the sky - but in reverse.<br>
 Mt Bonnell| Beautiful view of Austin. You realize that Austin has a TON of water pockets in and around.<br>
 Alamo Drafthouse| It is like NiteHawk in Brooklyn, but this is the mothership. More space, better food.<br>
-South Congress| You won’t miss it. Bum around, antique stores, trailer food & music.<br>
+South Congress| You can’t miss it. Bum around, antique stores, trailer food & music.<br>
 
 <h2>Eat</h2>
 Hopdoddy| THE best vegetarian burger ever. Couldn't resist going back a couple of times.<br>
 Torchy's Tacos| Damn good tacos. Try the fried avocado taco & corn.<br>
 Fonda San Miguel| Little out of the way and expensive but utterly worth it. Had the best mexican food (not tex-mex) we had ever tasted.<br>
-
+Trailer Food in East Austin| You’ll probably see this everywhere, but be sure to check it out in East Austin. Plus East Austin is a cool neighbourhood to walk around.<br>
 
 <h2>Drink</h2>
 Rainey Street| A cool little street with a ton of bars. Outdoor seating and almost every bar is unique.<br>
 6th Street| Didn’t blow us away but a ton of bars. Worth walking down once.<br>
 Easy Tiger| Cool bar on 6th street which doubled as a bakery. Has ping-pong!<br>
-Trailer Food in East Austin| You’ll probably see this everywhere, but be sure to check it out in East Austin. Plus East Austin is a cool neighbourhood to walk around.<br>
+East Side Showroom| Throwback bar with excellent cocktails.<br>
 
-
+---
