--- a/_posts/2014-08-31-beats.markdown
+++ b/_posts/2014-08-31-beats.markdown
@@ -8,7 +8,7 @@ For me, there are very few solo activities that don’t involve music playing in
 </br>
 First, if I am at a park or a place without Wi-Fi, I don’t want to be stranded without the music of my choice. Add to that the stupid data limits placed by phone networks which restrict your ability to stream music. Second, a lot of unique music is made by artists that don’t <a href="http://goo.gl/QFaaZ1">sell</a> their music, and therefore not available through Spotify type services.
 
-A friend recently recommended <a href = ”http://musicforprogramming.net”>MusicforProgramming.net</a>, and it is fantastic. The problem was that the music I wanted was sprawled across 27 pages on the site. I didn’t want to click on each link and download it manually. Moments like these are when I am truly thankful that I can code my way out such scenarios.
+A friend recently recommended <a href = "http://musicforprogramming.net">MusicforProgramming.net</a>, and it is fantastic. The problem was that the music I wanted was sprawled across 27 pages on the site. I didn’t want to click on each link and download it manually. Moments like these are when I am truly thankful that I can code my way out such scenarios.
 
 I wrote this little Python script that takes a website and downloads any mp3 files found on the site. Additionally, it will go to any links it finds on the given site, navigate to the pages and download all those mp3 files that it finds on each page as well. Since the files being downloaded are quite large, the script also prints the status of each download. 
 
@@ -36,7 +36,7 @@ You can find the full script in this <a href ="https://gist.github.com/jasti/cf5
 <center><img src="/images/blog/beats/running.png"/></center> 
 
 
- Feel free to copy, download, share or distribute. You should be able to reuse this by simply editing some variables. For e.g., I programmatically download some of my favourite audio podcasts from KEXP’s <a href =”http://feeds.kexp.org/kexp/musicthatmatters”>‘Music That Matters’</a>  that I often use for my long runs.
+ Feel free to copy, download, share or distribute. You should be able to reuse this by simply editing some variables. For e.g., I programmatically download some of my favourite audio podcasts from KEXP’s <a href ="http://feeds.kexp.org/kexp/musicthatmatters">‘Music That Matters’</a>  that I often use for my long runs.
 </br>
  HUGE time-saver. More time for watching those cat videos, you know.
 
