--- a/_posts/2014-08-01-austin.markdown
+++ b/_posts/2014-08-01-austin.markdown
@@ -14,7 +14,10 @@ The first thing as a tourist you might notice are the signs which say ‘Keep Au
 Having lived in New York city for quite a bit, you tend to have your guard up all the time. Feeling insecure and always alert. You feel like someone is always out to get you. Austin is quite the opposite of that. People want to help you and if you are like me, you will look down and scurry when someone greets you with a pleasant ‘good morning’ on the jogging path. You get used it soon enough, though. People have a laid back approach to things and seem to have a very ‘live and let live’ mentality.
 
 The downsides are the heat and Austin’s underwhelming coffee shop selection. 
+
 There is outdoor seating almost everywhere you go with large fans that spray mist which helps with the ridiculous heat. We were there on one of the hottest days of the summer and it is impossible to sit outside without these misting fans. We tried about 5 coffee shops and had a rather OK experience. From a free-willed place like Austin, my expectations for coffee were much higher. Maybe we didn’t hit the right ones.
+
+*** UPDATE : Take my statement back about coffee shops after discovering Caffe Medici!
    
 Here are some highlights from our trip, so the next time you tell me that you are thinking about a trip down south, I can direct you to this post.
 
