--- a/_posts/2014-11-30-josie.markdown
+++ b/_posts/2014-11-30-josie.markdown
@@ -7,17 +7,17 @@ tags : Personal
 
 <i>If you don’t care to read about pets, please stop and press CMD+Q on your keyboard. </i>
 
-Josie was a rescue. When Kitty-Kind rescued her, she was in an empty warehouse with a pile of dry food that somebody had left for her. Cats behave differently if you have had them since kittens. Rescues usually don’t trust their owners and especially in Josie’s case, she had strong separation anxiety. 
+Josie was a rescue. When Kitty-Kind rescued her, she was in an empty warehouse with a pile of dry food that somebody had left for her. Cats behave differently if you have had them since kittens. Rescues usually don’t trust their owners, and, especially in Josie’s case, have strong separation anxiety. 
 
 Three years ago, I became a pet owner by way of default. When I was about to ask Kristina to move in with me, my biggest hesitation was Josie. I never had a pet my entire life and quite honestly, didn’t see the point. Especially cats - you feed them, scoop their sandbox, arrange for cat sitters when you travel, frequently cleaning the house for cat fur… Sometimes it could be as simple as getting upset with her fur sticking on my formal pants. 
 
-Josie and I did not get off on a good start. I treated her like that roommate that never paid rent, ate the food we bought and made a mess of the house. Kristina and I rarely argue, and when we did, it was about Josie, because of the way we had to divy up house chores. We also agreed that we weren’t going to allow Josie in the bedroom after we moved in together.
+Josie and I did not get off on a good start. I treated her like that roommate that never paid rent, ate the food we bought and made a mess of the house. Kristina and I rarely argue, and when we did, it was about Josie, because of the way we had to divvy up house chores. We also agreed that we weren’t going to allow Josie in the bedroom after we moved in together.
 
 My relationship with Josie was transactional, and I always thought I couldn't wait for the day until she was gone.  Sure enough, I was dead wrong. 
 
 Over the years, Josie changed and so did I. Whenever one of us sat on the couch, she would come sit about 5 feet away from us. Expecting US to come pet her. When I cooked, she would come sit next to my feet praying dearly for a piece of meat to fall out of the wok. She would feel so lonely during the night that the moment we woke up, she would come into the bathroom with me and want pets. Once in a while when we slept in the living room instead of waking us with a meow, she would watch me from about 3 inches away from my face to see if I was awake. On the days we slept in our bedroom, she would be our wake up alarm as the sun rose. I used to get quite silly with her, by making her moonwalk to Michael Jackson’s tunes or by tumbling her on the couch. No matter what, she always came back to me for more. She was a fighter.
 
-6 months ago, she was diagnosed with diabetes. Even just cutting Josie’s nails is quite a painful ordeal. I can’t imagine how much harder it would be to give her insulin shots on her belly. We decided not to treat her because of the discomfort she and we would have to go through. We made significant dietary changes and she recovered quite well. It meant that we had to be more careful about how long we left her by herself, but that’s something K and I got used to over time. 
+6 months ago, she was diagnosed with diabetes. Even just cutting Josie’s nails was quite a painful ordeal. I can’t imagine how much harder it would have been to give her insulin shots on her belly. We decided not to treat her because of the discomfort she and we would have had to go through. We made significant dietary changes and she recovered quite well for a while. It meant that we had to be more careful about how long we left her by herself, but that’s something K and I got used to over time. 
 
 Somewhere along the line, I don’t know when, the arbitrary, intangible relationship that I adopted by way of default turned into feeling completely responsible for her. I don’t know what it is like to have kids, but for me, helping Josie through her sickness bouts was the closest I have felt to fatherhood.
 
@@ -25,11 +25,13 @@ Last week, her hind legs gave away. It is a common side effect of diabetes. Apar
 
 From worrying about her fur sticking on my pants to not minding cleaning her pee outside her sandbox was quite a change in such a relatively short time.  It’s amazing what you would do for someone once you are emotionally attached to them.
 
-Kristina and I had decided that the day we felt like Josie was not having a good quality of life we would have to take the call. We tried out a couple of remedies and she would only get worse. What would you do when you know that your kitty has only a day or two to live? The worst part of it all is the self doubt once you had made the call to put her to sleep. Every second, you look for the smallest improvements. 
+Kristina and I had decided that the day we felt like Josie was not having a good quality of life we would have to make the call. We tried out a couple of remedies, and she would only get worse. What would you do when you know that your kitty has only a day or two to live? The worst part of it all is the self doubt once you had made the call to put her to sleep. Every second, you look for the smallest improvements. 
 
-We went to the supermarket, bought chicken and there ensued my most emotionally charged meal preparation in my life. Josie loved chicken. Anytime we prepared it, she would go around in circles in the kitchen, jumping up and down, until she got fed. I don’t know how cats look when they smile, but I know that the smell of fresh cooking chicken most definitely made her smile. Quite an irony that we were killing one animal to make another dying animal happy. I guess emotional bonds work in funny ways.
+We went to the supermarket, bought chicken and there ensued my most emotionally-charged meal preparation in my life. Josie loved chicken. Anytime we prepared it, she would go around in circles in the kitchen, jumping up and down, until she got fed. I don’t know how cats look when they smile, but I know that the smell of fresh cooking chicken most definitely made her smile. Quite an irony that we were killing one animal to make another dying animal happy. I guess emotional bonds work in funny ways.
 
-I don’t know when I’ll get used to not expecting her to greet us when we walk into the apartment or not expecting her to wake us up in the morning everyday or not always hanging around in about a 5 feet distance from us. 
+I don’t know when I’ll get used to not expecting her to greet us when we walk into the apartment or not expecting her to wake us up in the morning everyday or not always hanging around 5 feet away from us. 
+
+Non-blood relations are such a rollercoaster because they tend to leave you vulnerable when you least expect them, but with you, Josie, I would do it all over again.
 
 I miss you my little girl.
 
