--- a/_posts/2014-11-30-josie.markdown
+++ b/_posts/2014-11-30-josie.markdown
@@ -31,7 +31,7 @@ We went to the supermarket, bought chicken and there ensued my most emotionally-
 
 I don’t know when I’ll get used to not expecting her to greet us when we walk into the apartment or not expecting her to wake us up in the morning everyday or not always hanging around 5 feet away from us. 
 
-Non-blood relations are such a rollercoaster because they tend to leave you vulnerable when you least expect them, but with you, Josie, I would do it all over again.
+Non-blood relations can be like rollercoaster rides because they tend to leave you vulnerable when you least expect them, but with you, Josie, I would do it all over again.
 
 I miss you my little girl.
 
