--- a/_posts/2015_07_12-thirty.markdown
+++ b/_posts/2015_07_12-thirty.markdown
@@ -1,15 +1,12 @@
 ---
 layout: post
-title: 
+title: Thirty
 category: posts
 tags : Tech
 ---
 
-<quote>
-
 Life is essentially a cheat and its conditions are those of defeat [and] the redeeming things are not “happiness and pleasure” but the deeper satisfactions that come out of struggle. - Scott F Fitzgerald
 
-</quote>
 I turned thirty last week. Thought I'd be interesting to capture my current sense of being. A la "state of mind", if you will. Obviously, take this with a laddle full of salt. Most of it is probably just my personality and some of it just circumstantial.
 
 Thirty is not old, but it's definitely not young. No one here after will refer to me as young man as I'd heard every alternate hour, a few years ago. It sounds a bit morose, but it isn't. I've heard people say that 20's is the best decade, but I don't agree. I really enjoyed my 20's, but given an option between living from this moment on or starting over from my 20th birthday, I'd no doubt pick the former. 
@@ -44,8 +41,8 @@ I try and avoid spending time with people I don't like and be around my friends.
 The overarching feeling is a sense of extreme thanks. 
 
 Extreme thanks for being at the right place at the right time. No more is a feeling of looking for happiness (atleast not conciously) or a goal to "be happy". Feel like I am already there. The finish line is behind me, and everything I could have ever known to ask for, I already have. 
-
-
+   
+---
 
 
 
