--- a/_posts/2015-03-04-everyday.markdown
+++ b/_posts/2015-03-04-everyday.markdown
@@ -10,9 +10,9 @@ It goes like this:
 
 <center><b>Workout. Every. Single. Day.</b></center>
 <br>
-You may be thinking that your body may not be able to handle the stress of working out every day. After some experimentation, I’ve realized my mind gives in waaay before my body does. Be it a workout or the ability to push through the days. The idea of giving your muscles and body is rest is overrated. It began with bulky bodybuilders giving their body some rest after working out for about 5 hours a day. For the average being I am, my 1 hour per day workout routine is nowhere close to rest-day-worthy. The more I take my body outside its comfort zone, the more my body is willing to adapt. 
+You may be thinking that your body may not be able to handle the stress of working out every day. After some experimentation, I’ve realized my mind gives in waaay before my body does. Be it a workout or the ability to push through the days. The idea of giving your muscles and body rest is overrated. It began with bulky bodybuilders giving their body some rest after working out for about 5 hours a day. For the average being I am, my 1 hour per day workout routine is nowhere close to rest-day-worthy. The more I take my body outside its comfort zone, the more my body is willing to adapt.  
 
-The best analogy I can think of to compare working out to is flossing. Remember how hard it was when you started flossing for the first couple of times? Didn’t you want to quit? It was hard in the beginning to keep up with it everyday, but after a couple of weeks, you can’t not floss every day. The flossing analogy also works well because just like working out, they are both not mandatory (unlike brushing, which has immediate feedback) and the benefits or disadvantages are not realized until after some unit of time.
+The best analogy I can think of to compare working out to is flossing. Remember how hard it was when you started flossing for the first couple of times? Didn’t you want to quit? It was hard in the beginning to keep up with it everyday, but after a couple of weeks, you can’t not floss every day. The flossing analogy also works well because just like working out, they are both not mandatory (unlike brushing, which has immediate feedback) and the benefits or disadvantages are not realized until after some time has passed.
 
 Sometimes things come up when mother calendar plays havoc, and I have a simple rule to accommodate that. If I miss a session, I have to workout twice the next day. Doing this makes me really think hard about missing my session for a day. 
 
@@ -21,6 +21,6 @@ It is also important not to do the same workout everyday. Avoid monotony by swit
 The weekends can get hard, especially if you have been out Friday night, hanging out with friends. The thing that has worked for me is to commit to a Saturday morning workout session. In my case, I do a 90 min hot yoga class at 10 AM every Saturday. It kicks my butt every single time, but I know that I will feel that much better after the class, and what a way to kickoff the weekend!
 
 
-We humans are built for doing hard physical things. Sitting at a desk, staring at a computer all day is unnatural. Make that commitment to Workout. Every. Single. Day and stop worrying about silly yearly fitness resolutions. 
+We humans are built for doing hard physical things. Sitting at a desk, staring at a computer all day is unnatural. Make that commitment to Workout. Every. Single. Day and stop worrying about silly yearly fitness resolutions.
 
 ---
